[package]
name = "async-try-clone-macro"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dev-dependencies]
async-trait = "0.1.42"
trybuild = "1.0"
tokio = {version="1.0",features=["macros"]}

[[test]]
name="tests"
path = "tests/main.rs"

[dependencies]
proc-macro2= "1.0.30"
syn = {version="1.0.80"}
quote = "1.0.10"
